--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,57 @@
-h1{
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
-    color: tomato;
+
+
+
+* {
+
+    margin: 0;
+    padding: 0;
+    font-family: "Lato", sans-serif;
+}
+
+
+.hero {
+    background-image: url('../images/zoro.png');
+    background-position: bottom-center;
+    height: 100vh;
+    background-size: cover;
+
+}
+
+.hero h1 {
+    color: rgb(16, 228, 129);
+    font-size: 100px;
+    text-align: center;
+    font-weight: 700;
+    padding-top: 60px;
+    font-family: cursive;
+    word-spacing: 20px;
+    letter-spacing: 5px;
+}
+
+.article {
+    width: 80%;
+    margin: 60px auto;
+    border-width: 10px;
+    border-color: rgb(14, 160, 92);
+    ;
+    border-style: groove;
+    background-color: rgb(53, 240, 240);
+    padding: 60px;
+}
+
+.article h2 {
+    text-align: center;
+    font-size: 38px;
+    border-bottom: 2px;
+    border-style: solid;
+    border-width: 2px;
+    border-right: 0;
+    border-top: 0;
+    border-left: 0;
+    border-color: rgb(14, 160, 92);
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+
 }
